wording, feature description

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -115,7 +115,7 @@ movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking t
 movie.remove=Remove selected movie(s) (DB)
 movie.delete=Delete selected movie(s) (DB + file)
 movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source!
-movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager  
+movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source\nand deleted on exit of tinyMediaManager (if activated in settings)  
 movie.rename=Rename/cleanup selected movie(s)
 movie.renamepreview=Rename/cleanup selected movie(s) - dry run
 movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
