added preview of changelog for a new version

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -14,6 +14,7 @@ Button.edit=Edit
 Button.register=Register
 Button.rename=Rename
 Button.chooseplayer=Choose player
+Button.update=Update
 
 menuitem.cut=Cut
 menuitem.copy=Copy
@@ -59,7 +60,7 @@ tmm.nfo=NFO
 tmm.images=Images
 tmm.trailer=Trailer
 tmm.subtitles=Subtitles
-tmm.update.title=check for update
+tmm.update.title=Check for update
 tmm.update.message=A new update has been found.\nDo you want to update?
 tmm.registeredto=Registered to:
 tmm.registerdonator=Register for donator version
