--- a/src/messages.properties
+++ b/src/messages.properties
@@ -440,6 +440,7 @@ trakt.clear.movies=Clearing Trakt.tv movie(s)
 trakt.clear.tvshows=Clearing Trakt.tv TV show(s)
 
 # metatags
+metatag.3d=3D
 metatag.actors=Actors
 metatag.aired=Aired
 metatag.artwork=Artwork
