--- a/changelog.txt
+++ b/changelog.txt
@@ -2,12 +2,15 @@ Version 2.7 (upcoming)
 =======================
 + changed Fanart.tv to v3 API (with clientKey)
 + added more artwork scraping dialogs
++ new Excel export template (xml)
 + added $L language renaming option
 + added/improved 3D handling
 + certification bulk edit
 + add season to image chooser title
 + fixed/improved some tooltips
++ improved artwork sorting, better language detection
 x fixed MacOS startup; Java detection, executable, ...
+x fixed SSxEE TvShow parser
 
 Version 2.6.3
 =======================
