added en/de hint for feedback and bug report dialog

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -240,7 +240,7 @@ BugReport=Report a bug
 BugReport.name=Name
 BugReport.email=Email
 BugReport.email.description=Please enter a valid email. We may need to contact you to get more information
-BugReport.description=Description
+BugReport.description=Description (in English or German!)
 BugReport.description.empty=No description provided
 BugReport.attachments=Attachments
 BugReport.logs=Logs
@@ -251,7 +251,7 @@ BugReport.send.ok=Bug report sent
 Feedback=Send feedback
 Feedback.name=Name (optional)
 Feedback.email=Email (optional)
-Feedback.message=Feedback
+Feedback.message=Feedback (in English or German!)
 Feedback.message.empty=Feedback is empty
 Feedback.send.error=Error sending feedback
 Feedback.send.ok=Feedback sent
