--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-Version 2.7 (upcoming)
+Version 2.6.4 
 =======================
 + changed Fanart.tv to v3 API (with clientKey)
 + added more artwork scraping dialogs
@@ -7,10 +7,13 @@ Version 2.7 (upcoming)
 + added/improved 3D handling
 + certification bulk edit
 + add season to image chooser title
-+ fixed/improved some tooltips
-+ improved artwork sorting, better language detection
++ remember last opened directory in the directory/file chooser
+x fixed/improved some tooltips
+x improved artwork sorting, better language detection
 x fixed MacOS startup; Java detection, executable, ...
 x fixed SSxEE TvShow parser
+x fixed movie exporter filename generation
+x many code cleanups 
 
 Version 2.6.3
 =======================
