add new MF type TEXT (for *.txt files) so we can parse additional infos from such files...

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -524,6 +524,7 @@ mediafiletype.video_extra=Video Extras
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Subtitle
 mediafiletype.nfo=NFO
+mediafiletype.text=Text
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
