added downloading of urls in the image chooser

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -188,6 +188,8 @@ scraper.artwork=Artwork scraper
 scraper.trailer=Trailer scraper
 
 image.choose=Choose an image
+image.inserturl=Insert an url to an image here
+image.downloadimage=Download image
 image.choose.file=Choose file
 image.choose.fanart=Choose fanart
 image.choose.poster=Choose poster
