added hints for scrapers

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -663,3 +663,12 @@ Genres.TV_MOVIE = TV Movie
 Genres.THRILLER = Thriller
 Genres.WAR = War
 Genres.WESTERN = Western
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />The largest free movie database maintained by the community. It provides metadata and artwork<br />in many different languages. Thus it is the first choice for non english users<br /><br />Available languages: multiple</html> 
+scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />The most used database for movies all over the world.<br />Does not contain plot/title/tagline in every language. You may choose to download these texts from TMDB<br /><br />Available languages: multiple</html>
+scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages: DE</html>
+scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages: DE</html>
+scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages: NL</html>
+scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages: EN</html>
