reworked movie renamer settings

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -354,6 +354,8 @@ Settings.sorting.info=Choose prefixes, which will affect the sort order of the l
 Settings.renamer=Renamer
 Settings.renamer.folder=Folder name
 Settings.renamer.file=File name
+Settings.renamer.token=Token description
+Settings.renamer.value=Value from the example
 Settings.renamer.asciireplacement=Replace non ASCII characters with their basic ASCII equivalents
 Settings.renamer.asciireplacement.hint=Examples: Ä => Ae; Ö => Oe; ß => ss; Á = > A; Æ => Ae; ...
 Settings.cleanupoptions=Cleanup options
@@ -371,10 +373,29 @@ Settings.trailer.preferred=Use preferred trailer settings
 Settings.trailer.source=Trailer source
 Settings.trailer.quality=Trailer quality
 
-Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$E = Sort title\r\n$2 = first letter of sort title\r\n$Y = Year\r\n$M = Movieset title (sort title)\r\n$N = Movieset title\r\n$I = IMDB number\r\n$C = Certification\r\n$L = Language\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format\r\n$F = video format\r\n$S = media source (DVD etc)\r\n$3 = 3D tag (3D SBS/TAB)\r\n\r\n{} = optional replacement\r\n eg: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
+Settings.movie.renamer.title=Renamer pattern and options
+Settings.movie.renamer.info={} = optional replacement\r\neg: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
 Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
 Settings.movie.renamer.nomovie=at least one movie is needed for the example
 Settings.movie.renamer.spacesubstitution=Replace spaces with
+
+Settings.movie.renamer.$T=Title
+Settings.movie.renamer.$O=Original title
+Settings.movie.renamer.$1=first letter of the title
+Settings.movie.renamer.$E=Sort title
+Settings.movie.renamer.$2=first letter of sort title
+Settings.movie.renamer.$Y=Year
+Settings.movie.renamer.$M=Movieset title (sort title)
+Settings.movie.renamer.$N=Movieset title
+Settings.movie.renamer.$I=IMDB number
+Settings.movie.renamer.$C=Certification
+Settings.movie.renamer.$L=Language
+Settings.movie.renamer.$R=Video resolution
+Settings.movie.renamer.$A=audio code + channels
+Settings.movie.renamer.$V=video code + format
+Settings.movie.renamer.$F=video format
+Settings.movie.renamer.$S=media source (DVD etc)
+Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
 
 Settings.tvshow.renamer.info=ToDo
 Settings.tvshow.renamer.example=ToDo
