change text id in movie renamer settings

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -374,7 +374,7 @@ Settings.trailer.source=Trailer source
 Settings.trailer.quality=Trailer quality
 
 Settings.movie.renamer.title=Renamer pattern and options
-Settings.movie.renamer.info={} = optional replacement\r\neg: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
+Settings.movie.renamer.optional={} = optional replacement\r\neg: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
 Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
 Settings.movie.renamer.nomovie=at least one movie is needed for the example
 Settings.movie.renamer.spacesubstitution=Replace spaces with
