implemented DVD ordering

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -404,6 +404,7 @@ Settings.tvshow.renamer.example=ToDo
 Settings.tvshowdatasource=TV show datasources
 Settings.tvshowdatasource.folderchooser=add TV show datasource
 Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the TMM database. Continue?
+Settings.dvdorder=Imported episodes are in DVD order
 Settings.tvshowseasontofilename=add season to filename
 Settings.tvshowtofilename=add TV show name to filename
 Settings.tvshowepisodetofilename=add episode title to filename
@@ -445,6 +446,9 @@ tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
 tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
 tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
 tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+tvshow.changetodvdorder=Change selected episode(s) to DVD order
+tvshow.changefromdvdorder=Change selected episode(s) to aired order
+tvshow.changeorder.desc=This should be used after import, before you scrape
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.scrape.withoutartwork=Scrape episode metadata (without thumbs)
@@ -480,6 +484,9 @@ metatag.dateadded=Date Added
 metatag.details=Details
 metatag.details2=Details 2
 metatag.director=Director
+metatag.dvdepisode=DVD episode
+metatag.dvdorder=DVD ordering
+metatag.dvdseason=DVD season
 metatag.episode=Episode
 metatag.episodes=Episodes
 metatag.external=external
