completely rewrote the TV show renamer (now configureable)

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -397,21 +397,30 @@ Settings.movie.renamer.$F=video format
 Settings.movie.renamer.$S=media source (DVD etc)
 Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
 
-Settings.tvshow.renamer.info=ToDo
-Settings.tvshow.renamer.example=ToDo
+Settings.tvshow.renamer.title=Renamer pattern and options
+
+Settings.tvshow.renamer.$N=TV show name
+Settings.tvshow.renamer.$Y=Year
+Settings.tvshow.renamer.$T=Episode title
+Settings.tvshow.renamer.$F=Video format
+Settings.tvshow.renamer.$1=Season number
+Settings.tvshow.renamer.$2=Season number with at least 2 digits
+Settings.tvshow.renamer.$E=Episode number
+Settings.tvshow.renamer.$R=Video resolution
+Settings.tvshow.renamer.$A=audio code + channels
+Settings.tvshow.renamer.$V=video code + format
+Settings.tvshow.renamer.$F=video format
+
 
 # tv show settings
 Settings.tvshowdatasource=TV show datasources
 Settings.tvshowdatasource.folderchooser=add TV show datasource
 Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the TMM database. Continue?
 Settings.dvdorder=Imported episodes are in DVD order
-Settings.tvshowseasontofilename=add season to filename
-Settings.tvshowtofilename=add TV show name to filename
-Settings.tvshowepisodetofilename=add episode title to filename
-Settings.tvshowseasonfoldername=season folder name
-Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits\nYou can omit creating the season folder by leaving this field blank.\nBut to use this, you have to check \"add season to filename\"
-Settings.separator=Separator
-Settings.separator.hint=Separator between title and season/episode number
+
+Settings.tvshowfoldername=TV show folder name
+Settings.tvshowseasonfoldername=Season folder name
+Settings.tvshowfilename=Episode file name
 Settings.tvshowspacereplacement.hint=Replace spaces in title with this character
 Settings.tvshow.certifactioncountry.hint=Hint: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications 
 
