added memory settings

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -297,6 +297,10 @@ Settings.trakt.clearmovies=Remove movies from Trakt.tv
 Settings.trakt.clearmovies.hint=ATTENTION: This will remove all your movies and watched states from your Trakt.tv profile. Proceed?
 Settings.trakt.cleartvshows=Remove TV shows from Trakt.tv
 Settings.trakt.cleartvshows.hint=ATTENTION: This will remove all your TV shows and watched states from your Trakt.tv profile. Proceed?
+Settings.misc=Misc. settings
+Settings.memoryborder=Memory settings
+Settings.memory=Max. memory
+Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
 Settings.poster=Poster and Fanart
